--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, FILE
  
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -20,9 +20,10 @@ log4j.appender.FILE.ImmediateFlush=true
 log4j.appender.FILE.Threshold=debug
 
 # Set the append to false, overwrite
-log4j.appender.FILE.Append=false
+log4j.appender.FILE.Append=true
 
 # Define the layout for file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.FILE.layout.conversionPattern=%m%n
  
