--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,14 @@
 			<version>${openrdf-rio.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.externalsortinginjava</groupId>
+			<artifactId>externalsortinginjava</artifactId>
+			<version>0.1.10-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/resources/externalsortinginjava-0.1.10-SNAPSHOT-jar-with-dependencies.jar</systemPath>
+		</dependency>
+
 
 	</dependencies>
 
