--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, FILE, stdout
+log4j.rootLogger=DEBUG, FILE, stdout
  
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
