Start refactoring database and resources files

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,15 +1,9 @@
-MONGODB_HOST=localhost
-MONGODB_PORT=27017
-MONGODB_DB=LODVaderCloud
-MONGODB_SECURE_MODE=false
-MONGODB_USERNAME=admin
-MONGODB_PASSWORD=1234
 
 #password used to remove datasets
 REMOVE_DATASET_PASS=12345
 
 #path used to store files
-BASE_PATH =/home/LODVader/LODVaderData/
+#BASE_PATH =/home/LODVader/LODVaderData/
 
 #use or not multithread to compare files and make linksets
 USE_MULTITHREAD=1
